--- a/app/src/main/res/layout/activity_fc__cart.xml
+++ b/app/src/main/res/layout/activity_fc__cart.xml
@@ -286,11 +286,23 @@
                                 style="@style/FC_SmallThickTextView"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:layout_marginStart="@dimen/_10sdp"
                                 android:background="@null"
                                 android:hint="@string/enter_coupon_code" />
 
 
+                            <View
+                                android:layout_width="@dimen/_1sdp"
+                                android:layout_height="match_parent"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_10sdp"
+                                android:background="@color/txt_lite_gray_color" />
+                            <ImageView
+                                android:id="@+id/img_instruction"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/restaurants" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -506,6 +518,7 @@
                             style="@style/FC_SmallThickTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_2sdp"
                             android:text="@string/currency"
                             android:textColor="@color/txt_site_red_color" />
 
@@ -523,6 +536,7 @@
                         android:layout_width="@dimen/_10sdp"
                         android:layout_height="@dimen/_10sdp"
                         android:src="@drawable/close"
+                        android:visibility="gone"
                         android:layout_gravity="right|center"
                         android:layout_marginEnd="@dimen/_5sdp"/>
 
