--- a/app/src/main/res/layout/layout_past_order_items.xml
+++ b/app/src/main/res/layout/layout_past_order_items.xml
@@ -93,7 +93,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
                     style="@style/FC_SmallTextView"/>
-
+                <food.user.demand.FCUtils.Loader.LoaderTextView
+                    android:id="@+id/lt_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    style="@style/FC_SmallTextView"/>
 
             </LinearLayout>
 
