--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,10 @@
     <color name="my_black">#212121</color>
     <color name="black">#000000</color>
 
+    <color name="pale_green">#98FB98</color>
+    <color name="pale_red">#FFA07A</color>
+    <color name="pale_blue">#cff5f5</color>
+
     <color name="color_red">#F02020</color>
 
     <color name="view_color">#C0BFBF</color>
