--- a/app/src/main/res/layout/fragment_fc__account.xml
+++ b/app/src/main/res/layout/fragment_fc__account.xml
@@ -498,7 +498,13 @@
 
             </FrameLayout>
         </LinearLayout>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:background="@color/txt_lite_gray_color" />
         <LinearLayout
             android:id="@+id/ll_wallet"
             android:layout_width="match_parent"
