--- a/app/src/main/res/layout/fragment_fc__home.xml
+++ b/app/src/main/res/layout/fragment_fc__home.xml
@@ -160,7 +160,7 @@
                     android:layout_marginStart="@dimen/_8sdp"
                     android:background="@color/txt_gray_color" />
 
-                <food.user.demand.FCViews.AC_Edittext
+                <food.user.demand.FCViews.AC_Textview
                     android:id="@+id/edtsearch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -504,12 +504,17 @@
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_weight="1.8"
+                    android:layout_gravity="center"
                     android:background="@color/color_red"
                     android:gravity="center">
 
                     <food.user.demand.FCViews.VerticalLabelView
-                        android:layout_width="wrap_content"
+                        android:layout_width="25dp"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:textAlignment="center"
+                        android:layout_gravity="center"
                         app:text="@string/hot_sellers"
                         app:textColor="@color/white"
                         app:textSize="@dimen/_10ssp" />
@@ -688,7 +693,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_10sdp"  />
+                android:layout_marginEnd="@dimen/_10sdp"
+                tools:ignore="TooManyViews" />
 
 
             <LinearLayout
