--- a/app/src/main/res/layout/layout_favorites.xml
+++ b/app/src/main/res/layout/layout_favorites.xml
@@ -96,6 +96,8 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/_2sdp"
                 android:paddingEnd="@dimen/_2sdp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:paddingBottom="@dimen/_2sdp"
                 style="@style/FC_verySmallTextView"/>
 
