--- a/app/src/main/res/layout/activity_fc__order_picked_up.xml
+++ b/app/src/main/res/layout/activity_fc__order_picked_up.xml
@@ -233,7 +233,7 @@
                     android:orientation="horizontal"
                     android:weightSum="5">
                     <food.user.demand.FCViews.AC_Textview
-                        style="@style/FC_RegularThickTextView"
+                        style="@style/FC_SmallTextView"
                         android:id="@+id/txt_ordered"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -243,7 +243,7 @@
                         android:textColor="@color/txt_gray_color" />
 
                     <food.user.demand.FCViews.AC_Textview
-                        style="@style/FC_RegularThickTextView"
+                        style="@style/FC_SmallTextView"
                         android:id="@+id/txt_orderPickedUP"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -253,7 +253,7 @@
                         android:textColor="@color/txt_gray_color" />
 
                     <food.user.demand.FCViews.AC_Textview
-                        style="@style/FC_RegularThickTextView"
+                        style="@style/FC_SmallTextView"
                         android:id="@+id/txt_preparing"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -265,7 +265,7 @@
                         android:textColor="@color/txt_gray_color" />
 
                     <food.user.demand.FCViews.AC_Textview
-                        style="@style/FC_RegularThickTextView"
+                        style="@style/FC_SmallTextView"
                         android:id="@+id/txt_outForDelivery"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -276,7 +276,7 @@
                         android:textColor="@color/txt_gray_color" />
 
                     <food.user.demand.FCViews.AC_Textview
-                        style="@style/FC_RegularThickTextView"
+                        style="@style/FC_SmallTextView"
                         android:id="@+id/txt_Delivered"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
