--- a/app/src/main/res/layout/fragment_fc__account.xml
+++ b/app/src/main/res/layout/fragment_fc__account.xml
@@ -209,10 +209,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:visibility="gone"
                     android:background="@color/txt_lite_gray_color" />
 
                 <LinearLayout
                     android:id="@+id/ll_payment"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
