--- a/app/src/main/res/layout/layout_recommended_items.xml
+++ b/app/src/main/res/layout/layout_recommended_items.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:id="@+id/ll_dishimage"
@@ -202,7 +202,7 @@
                     tools:ignore="RtlHardcoded">
 
                     <LinearLayout
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:id="@+id/ll_addBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -227,7 +227,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/cart_add_outline"
                         android:gravity="center"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:orientation="vertical"
                         tools:ignore="UselessParent">
 
@@ -272,7 +272,7 @@
                             android:indeterminateOnly="true"
                             android:layout_marginTop="@dimen/_2sdp"
                             android:indeterminateTint="@color/txt_site_green_color"
-                            android:visibility="gone"/>
+                            android:visibility="visible"/>
 
 
                     </LinearLayout>
