--- a/app/src/main/res/layout/custom_device_location_off_alert.xml
+++ b/app/src/main/res/layout/custom_device_location_off_alert.xml
@@ -65,6 +65,7 @@
                     android:background="@drawable/rec_apply_btn_bg_blue"
                     android:text="@string/enable_location"
                     android:textSize="@dimen/_8ssp"
+                    android:visibility="visible"
                     android:textColor="#fff"/>
 
 
